--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   mongodb:
-    container_name: mongo_container
+    container_name: mongodb
     image: mongo:5.0.8-focal
     environment:
       - MONGO_INITDB_DATABASE=nauticalDb
@@ -13,6 +13,8 @@ services:
       - ./data:/data/db
     ports:
       - "27017:27017"
+    expose:
+      - "27017"
     restart: always
     networks:
       - nautical-network
@@ -23,7 +25,7 @@ services:
     depends_on:
       - mongodb
     environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo_container
+      - ME_CONFIG_MONGODB_SERVER=mongodb
       - ME_CONFIG_MONGODB_PORT=27017
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=secret
@@ -48,3 +50,4 @@ volumes:
 networks:
   nautical-network:
     name: nautical-network  
+    driver: bridge
