--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-rxjs": "^5.0.2",
     "husky": "^8.0.1",
     "jest": "^27.2.5",
     "lint-staged": "^13.0.0",
